<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Book_Mark</string>
    <string name="action_settings">Settings</string>
    <string name="applogo">Book_Mark</string>
    <string-array name="options">
        <item>Search</item>
        <item>Thriller</item>
        <item>Science</item>
        <item>Autobiography</item>
    </string-array>
    <string-array name="array_items">

        <item>The 7th victim</item>
        <item>The Girl On The Train</item>
        <item>Wrong Place</item>
        <item>Star Wars</item>
        <item>The Grand Design</item>
        <item>Stars are Legion</item>
        <item>Autobiography of Mark Twain</item>
        <item>Autobiography of Gandhi</item>
        <item>Autobiography of Benjamin Franklin</item>
        <item>The Inferno</item>
        <item>The Alchemist</item>
        <item>The Kite Runner</item>
        <item>Legends of Meluha</item>
        <item>Rich Dad Poor Dad</item>
    </string-array>
    <string name="title_activity_thriller">Thriller</string>
    <string name="the_7th_victim">The 7th Victim</string>
    <string name="thrill_1">TODO</string>
    <string name="title_activity_thriller2">Thriller</string>
    <string name="title_activity_thriller3">Thriller</string>
    <string name="wrong_place">Wrong Place</string>
    <string name="thrill_3">TODO</string>
    <string name="add_to_cart3">Add To Cart</string>
    <string name="_31">$31</string>
    <string name="add_to_cart2">Add To Cart</string>
    <string name="_21">$21</string>
    <string name="the_girl_on_the_train">The Girl On The Train</string>
    <string name="thrill_2">TODO</string>
    <string name="add_to_cart1">Add To Cart</string>
    <string name="_25" tools:ignore="DuplicateDefinition">$25</string>
    <string name="title_activity_science1">Science Fiction</string>
    <string name="add_to_cart6">Add To Cart</string>
    <string name="sci_1">TODO</string>
    <string name="star_wars">Star Wars</string>
    <string name="_25.2">$25</string>
    <string name="title_activity_science2">Science Fiction</string>
    <string name="the_grand_design">The Grand Design</string>
    <string name="price1">$35</string>
    <string name="add_to_cart4">Add To Cart</string>
    <string name="sci_2">TODO</string>
    <string name="title_activity_science3">Science Fiction</string>
    <string name="stars_are_legion">Stars Are Legion</string>
    <string name="_20">$20</string>
    <string name="add_to_cart5">Add To Cart</string>
    <string name="sci_3">TODO</string>
    <string name="title_activity_autobio1">Autobiography</string>
    <string name="_19">$19</string>
    <string name="autobiography_of_mark_twain">Autobiography of Mark Twain</string>
    <string name="add_to_cart7">Add to Cart</string>
    <string name="auto_1">TODO</string>
    <string name="title_activity_autobio2">Autobiography</string>
    <string name="mohandas_k_gandhi_autobiography">Mohandas K. Gandhi Autobiography</string>
    <string name="_22">$22</string>
    <string name="add_to_cart8">Add To Cart</string>
    <string name="auto_2">TODO</string>
    <string name="title_activity_autobio3">Autobiography</string>
    <string name="the_autobiography_of_benjamkin_franklin">The Autobiography of Benjamin Franklin</string>
    <string name="_23">$23</string>
    <string name="add_to_cart9">Add To Cart</string>
    <string name="auto_3">TODO</string>
    <string name="title_activity_homepage">Book_Mark</string>
    <string name="login">Login</string>
    <string name="enter_the_password">Enter the password</string>
    <string name="conti">Continue</string>
    <string name="enter_the_email">Enter the email</string>
    <string name="logo_pic">TODO</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_valid_email_id">Enter valid email Id</string>
    <string name="enter_valid_password">Enter valid Password</string>
    <string name="register">Register</string>
    <string name="title_activity_addcart">AddcartActivity</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="enter_your_age">Enter your Age</string>
    <string name="title_activity_confirm">ConfirmActivity</string>
    <string name="choose_payment_method">Choose Payment Method</string>
    <string name="wallet">Wallet</string>
    <string name="credit_card">Credit Card</string>
    <string name="debit_card">Debit Card</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_final">Book_Mark</string>
    <string name="thankyou_for_shopping">Thankyou For Shopping!!</string>
    <string name="look_like_you_are_offline_for_better_experience_use_application_online">look like you are offline for better experience use application online</string>
    <string name="ok_got_it">Ok Got It</string>

    <string name="todo">TODO</string>
    <string name="title_activity_add_cart">AddCartActivity</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="checkout">Checkout</string>
    <string name="shopping_cart_content">shopping Cart Content</string>
    <string name="textview">TextView</string>
    <string name="payment">Payment</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="button">Button</string>
    <string name="thriller_detail">Thriller</string>
    <string name="product_list">Product List</string>
    <string name="name">Name</string>
    <string name="unit_price">Unit Price</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="order">Order</string>
    <string name="total_price">Total Price</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="shop">Shop</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_item">Delete Item</string>
    <string name="delete_item_message">Are you sure you want to delete this item?</string>
    <string name="science_detail">Science</string>
    <string name="autobiography_detail">Autobiography</string>
    <string name="search">Search</string>


</resources>
