<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/orange"
    android:weightSum="1"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@android:color/white"/>
    <TextView
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="@string/unit_price"
        android:textColor="@android:color/white"/>
    <TextView
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:gravity="center"
        android:text="@string/quantity"
        android:textColor="@android:color/white"/>
    <TextView
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:gravity="center"
        android:text="@string/price"
        android:textColor="@android:color/white"/>

</LinearLayout>
