<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCDD2"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rauhilverma.book_mark.MainActivity"
    tools:showIn="@layout/activity_main">


    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView10"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView19"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="41dp"
            android:ems="10"
            android:hint="@string/enter_the_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText"
            android:layout_alignStart="@+id/editText"
            android:layout_below="@+id/editText"
            android:layout_marginTop="27dp"
            android:ems="10"
             android:hint="@string/enter_the_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editText2"
            android:layout_marginTop="14dp"
            android:text="@string/conti" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/logo_pic"
            app:srcCompat="@drawable/app_icon" />

        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView19"
            android:layout_alignStart="@+id/textView19"
            android:layout_below="@+id/button10"
            android:layout_marginTop="17dp"
            android:onClick="ButtonClick2"
            android:text="@string/sign_up" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
