<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rauhilverma.book_mark.SignupActivity"
    tools:showIn="@layout/activity_signup">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:background="#FFCDD2"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:text="@string/sign_up"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText6"
            android:layout_alignStart="@+id/editText6"
            android:layout_below="@+id/editText6"
            android:layout_marginTop="35dp"
            android:ems="10"
            android:hint="@string/enter_valid_email_id"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/button12"
            android:layout_alignLeft="@+id/editText3"
            android:layout_alignStart="@+id/editText3"
            android:layout_marginBottom="68dp"
            android:ems="10"
            android:hint="@string/enter_valid_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:text="@string/register"
            tools:ignore="OnClick" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView20"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/enter_your_name"/>

        <EditText
            android:id="@+id/editText6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText5"
            android:layout_alignStart="@+id/editText5"
            android:layout_below="@+id/editText5"
            android:layout_marginTop="46dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/enter_your_age"/>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
