<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rauhilverma.book_mark.ConfirmActivity"
    tools:showIn="@layout/activity_confirm">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="551dp"
        android:background="#fddff3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="#cafc6f"
            android:text="@string/choose_payment_method"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="269dp" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView22"
            android:layout_marginLeft="38dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="54dp"
            android:text="@string/cash_on_delivery"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/radioButton"
            android:layout_alignStart="@+id/radioButton"
            android:layout_below="@+id/radioButton"
            android:layout_marginTop="23dp"
            android:text="@string/credit_card"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/radioButton2"
            android:layout_alignStart="@+id/radioButton2"
            android:layout_below="@+id/radioButton2"
            android:layout_marginTop="24dp"
            android:text="@string/debit_card"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/radioButton3"
            android:layout_alignStart="@+id/radioButton3"
            android:layout_below="@+id/radioButton3"
            android:layout_marginTop="30dp"
            android:text="@string/wallet"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        <Button
            android:id="@+id/button14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/radioButton4"
            android:layout_marginTop="47dp"
            android:onClick="Conf"
            android:text="@string/confirm" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
