<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.rauhilverma.book_mark.ProductActivity">

    <TextView android:id="@+id/tvViewShoppingCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textColor="@color/blue"
        android:gravity="center"
        android:text="@string/shopping_cart"/>
    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvViewShoppingCart"
        android:background="@color/green"
        android:gravity="center"
        android:textAllCaps="true"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/tvProductDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvProductName" />

    <ImageView android:id="@+id/ivProductImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/llAction"
        android:layout_below="@id/tvProductDesc"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>
    <LinearLayout
        android:id="@id/llAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center_vertical|end"
            android:text="@string/quantity"/>
        <Spinner
            android:id="@+id/spQuantity"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"/>
        <Button
            android:id="@+id/bOrder"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/orange"
            android:text="@string/order"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>
    </LinearLayout>
</RelativeLayout>

